fix logo background & spacing of an element

--- a/backstory.css
+++ b/backstory.css
@@ -1,5 +1,5 @@
 * {
-    scroll-padding-top: 6rem;
+    scroll-padding-top: 9rem;
 }
 
 /*
@@ -14,8 +14,6 @@ body {
     background-color: #0d1b2a;
     font-family: "Inter", sans-serif;
 }
-
-
 
 
 
