--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
 
 
 body {
-    background: linear-gradient(-45deg, rgba(13, 27, 42, 1) 70%, rgba(85, 255, 170, .3));
+    background: linear-gradient(-45deg, rgba(13, 27, 42, 1) 75%, rgba(85, 255, 170, .3));
     background-color: #0d1b2a;
     font-family: "Inter", sans-serif;
 }
